Fix alignment issues

--- a/mu-plugins/blocks/local-navigation-bar/postcss/style.pcss
+++ b/mu-plugins/blocks/local-navigation-bar/postcss/style.pcss
@@ -210,7 +210,7 @@
 		}
 
 		&  .wp-block-navigation__responsive-container-close {
-			margin-block-start: calc(var(--wp--custom--local-navigation-bar--spacing--height) * -1) !important;
+			margin-block-start: calc((var(--wp--custom--local-navigation-bar--spacing--height) * -1) + 1px) !important;
 
 			@media (max-width: 600px) {
 				margin-inline-end: calc(16px + var(--wp--custom--alignment--scroll-bar-width));
@@ -221,6 +221,10 @@
 		& .wp-block-navigation__responsive-container-close,
 		& .wp-block-navigation__responsive-dialog {
 			background-color: inherit;
+		}
+
+		& .wp-block-navigation__responsive-container .wp-block-navigation__responsive-dialog {
+			margin-top: 0;
 		}
 
 		& .wp-block-navigation__container,
